--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-1) Create ComplexNumber demo
+1) Create ComplexNumber demo ! IMPORTANT !
 2) Demonstrate how to get latest changes from upstream
 bgfdndgf
 ffffffff
